Fixed: Header getting stretched too high and causing the tabs to be too large and falling on 2 lines.

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -20,7 +20,6 @@ body {
 }
 
 .header {
-	height: var(--headerHeight);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -87,6 +86,7 @@ h3 {
 #tabs > ul > li > a {
 	color: #333;
 	text-decoration: none;
+	font-size: 12px;
 }
 
 .ui-tabs-nav {
